# sinew

./: .gitignore  AGENTS.md  AMELIORATION_SSH.md  ANALYSE_COMMITS_120_175.md  ANALYSE_COMMITS_120_PLUS.md  ANALYSE_COMMITS_175_230.md  ANALYSE_COMMITS_1_30.md  ANALYSE_COMMITS_230_285.md  ANALYSE_COMMITS_285_PLUS.md  ANALYSE_COMMITS_30_60.md  ANALYSE_COMMITS_60_90.md  ANALYSE_COMMITS_90_120.md  ANALYSE_DEVTOOLS_MCP.md  ANALYSE_DIAGNOSTIC_GOOGLE.md  ANALYSE_INTEGRATION_DEVTOOLS.md  ANALYSE_SECTION_3_AI_ENGINE.md  AUDIT_PERFORMANCE_SOTA.md  AUDIT_RUST.md  AUDIT_SECURITE.md  CHANGELOG-JULIEN.md  CHANGELOG.md  COMPARAISON_ARCHITECTURE.md  Cargo.toml  DESIGN.md  EDIT_TOOL_COMPARISON.md  ETUDE_IMPACT_SECURITE.md  EXTRACTION_120_230.md  EXTRACTION_1_30.md  EXTRACTION_230_332.md  EXTRACTION_30_90.md  EXTRACTION_90_120.md  POWERUSER.md  RAPPORT_ANTIGRAVITY.md  RAPPORT_DAEMON_PERSISTANT.md  RAPPORT_DECOMPILE_CURSOR.md  RAPPORT_OUTILS.md  RAPPORT_VERIFICATION.md  RAPPORT_VERIFICATION_FINAL.md  README-FORK.md  README-FR.md  (+51 more)
.cargo/: config.toml
.github/workflows/: release.yml  security.yml
.sinew/skills/browser/: SKILL.md
.sinew/skills/computer_use/: SKILL.md
ClaakeCodeWeb/: index.html
claakecode-web/: index.html  styles.css
crates/claakecode-app/: Cargo.toml
crates/claakecode-app/src/: database.rs  database_tool.rs  lib.rs  store.rs  subagent.rs  team.rs
crates/sinew-agent-daemon/: Cargo.toml
crates/sinew-agent-daemon/src/: main.rs  protocol.rs
crates/sinew-anthropic/src/: client.rs  model_info.rs  stream.rs
crates/sinew-app/: Cargo.toml
crates/sinew-app/src/: agent.rs  bash.rs  browser.rs  check_sota.rs  codebase_search.rs  compact.rs  computer_use.rs  delete_file.rs  doc_tool.rs  edit.rs  editor_diagnostics.rs  glob.rs  grep.rs  image.rs  lib.rs  list_dir.rs  mcp.rs  patch.rs  powershell.rs  question.rs  read.rs  read_lints.rs  ripgrep.rs  semantic_search.rs  skill.rs  store.rs  subagent.rs  team.rs  test_flags.rs  tool_names.rs  tool_run.rs  web.rs  workspace.rs  workspace_memory.rs  write.rs
crates/sinew-app/src/agent/: assistant_message.rs  boost_distill.rs  cancel.rs  clean_context.rs  compaction.rs  context.rs  events.rs  history.rs  mode.rs  repeat_guard.rs  tests.rs  tool_dispatch.rs  tool_preflight.rs  tool_summary.rs  turn.rs
crates/sinew-app/src/team/: agent_turns.rs  context.rs  descriptors.rs  launch.rs  live.rs  model.rs  render.rs  session.rs  task_board.rs  tests.rs
crates/sinew-browser/: Cargo.toml
crates/sinew-browser/src/: dom.rs  lib.rs  recording.rs  session.rs
crates/sinew-cursor/: Cargo.toml
crates/sinew-cursor/proto/: README.md  agent.pb
crates/sinew-cursor/src/: client.rs  connect.rs  context_injection.rs  conversation.rs  encryption.rs  identity.rs  images.rs  lib.rs  model_info.rs  sanitize.rs  stream_state.rs  tests.rs  tools.rs  usage.rs  workspace.rs
crates/sinew-cursor/src/agent/: bridge.rs  client_proto.rs  connect_proto.rs  conversation_id.rs  exec_handler.rs  h2_client.rs  mod.rs  models.rs  proto_dynamic.rs  proto_pool.rs  retry.rs  run_h2.rs  run_request.rs  rust_bridge.rs  server_decode.rs  setup.rs  state.rs  tools.rs  transcript.rs  transport.rs
crates/sinew-cursor/src/auth/: api.rs  composer.rs  mod.rs  oauth.rs
crates/sinew-deepseek/: Cargo.toml
crates/sinew-index/: Cargo.toml
crates/sinew-index/src/: background.rs  chunk.rs  embeddings.rs  indexer.rs  lib.rs  process.rs  search.rs  store.rs
crates/sinew-ollama/: Cargo.toml
crates/sinew-openai/: Cargo.toml
crates/sinew-search/: Cargo.toml
crates/sinew-search/src/: chunker.rs  embedder.rs  index.rs  lib.rs  search.rs
refero-heroes/: metadata.json
remote/: README.md  package.json
remote/public/: app.js  index.html  manifest.webmanifest  styles.css
scripts/: AGENT-SPIKE-DESIGN.md  CAPTURE-MITM.md  _explore_agent.py  boost-proof.ps1  capture-refero-heroes.mjs  check.ps1  compil.ps1  dump_sinew_composer_request.py  export-agent-descriptor.mjs  monitor.ps1  prepare-agent-bridge.mjs  prepare-sidecars.mjs  probe_agent_run.py  probe_composer_hosts.py  probe_composer_matrix.py  probe_composer_validate.py  probe_full_sinew_payload.py  probe_idempotent_crypto.py  probe_idempotent_key_formats.py  probe_minimal_full_headers.py  sinew-auto.ps1  sinew-build-save.ps1  sinew-save.ps1  sinew-sync.ps1  sinew_composer_e2e.py  verify_all.py
scripts/agent-bridge/: README.md  exec-handlers.mjs  export-agent-fds-prost.mjs  h2-bridge.mjs  install-proto.mjs  package-lock.json  package.json  run-stream.mjs  test-live-rust.ps1  test-live.ps1
scripts/mitm/: README.md  check-mitm.ps1  install-mitmproxy.ps1  start-mitmweb.ps1
sinew-chrome-bridge/: add_to_sinew.py  background.js  com.sinew.chrome_bridge.json  e2e-local.mjs  e2e-structured.mjs  interact_chrome.js  launch_chrome_silent.bat  manifest.json  mcp_server.js  native_host.bat  package-lock.json  package.json  popup.html  popup.js  register.ps1  run_bridge.bat  run_sinew_bridge.bat  server.js  sinew_cursor.js
sinew-chrome-bridge/native-host-wrapper/: Cargo.toml
sinew-chrome-bridge/native-host-wrapper/src/: main.rs
sinew-sidecar/: requirements.txt  sinew_docs.py
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  PROVIDERS.md  tauri.conf.json  tauri.sidecars.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: boost.rs  cli.rs  context.rs  conversations.rs  git.rs  lib.rs  main.rs  models.rs  platform.rs  providers.rs  remote.rs  rules.rs  state.rs  swarm.rs  terminal.rs  tests.rs  tray.rs  turns.rs  workflow.rs  workspace.rs
src/components/: ClaakeCodeMark.tsx  ConversationList.tsx  DatabaseSettingsSection.tsx  EditorPane.tsx  FileTree.tsx  GitPanel.tsx  ImageContextMenu.tsx  RemotePanel.tsx  SearchPane.tsx  SettingsPane.tsx  SinewDesignDialog.tsx  TerminalPanel.tsx  UpdateBadge.tsx  UpdaterLockScreen.tsx  Welcome.tsx  Workspace.tsx  WorkspaceOnboarding.tsx
src/lib/: appearance.ts  customIcons.ts  databaseSettings.ts  editorTabs.ts  frRuntime.ts  i18n.ts  ipc.ts  locale.ts  models.ts  monacoTheme.ts  onboarding.ts  quotas.ts  recents.ts
(+44 files in other folders)
