[package]
name = "Sinew"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop app for Sinew"
default-run = "Sinew"

[lib]
name = "sinew_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sinew-anthropic = { workspace = true }
sinew-app = { workspace = true }
sinew-core = { workspace = true }
sinew-google = { workspace = true }
sinew-kimi = { workspace = true }
sinew-openai = { workspace = true }
sinew-openrouter = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
portable-pty = "0.9.0"
reqwest = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Used to allocate a hidden console at startup so child processes spawned via
# ConPTY (PowerShell) can initialize their DLLs even though Sinew itself runs
# as a GUI process with `windows_subsystem = "windows"`. Without this, PowerShell
# fails to start with STATUS_DLL_INIT_FAILED (0xc0000142).
winapi = { version = "0.3", features = ["consoleapi", "wincon", "winuser"] }

# Updater plugin is desktop-only (Tauri does not ship updater for iOS/Android).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { workspace = true }

[lints]
workspace = true
