[package]
name = "sinew-cursor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cursor provider integration for Sinew (Composer subscription + API pools)"

[dependencies]
sinew-core = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
