[package]
name = "sinew-cursor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cursor provider integration for Sinew (Composer subscription + API pools)"

[dependencies]
sinew-core = { workspace = true }
sinew-index = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
prost = "0.13"
prost-reflect = "0.14"
prost-types = "0.13"
hyper = { version = "1.6", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
http-body-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring", "native-tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
hex = "0.4"

[lints]
workspace = true
