[package]
name = "sinew-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local codebase index for Sinew (FTS chunks, incremental sync)"

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
directories = { workspace = true }
fastembed = "4"
notify = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
