[package]
name = "sinew-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Semantic code search engine for Sinew"

[dependencies]
anyhow = { workspace = true }
once_cell = "1"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
ignore = "0.4"
fastembed = "4"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

[lints]
workspace = true
