[package]
name = "native-host-wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }

[lints]
workspace = true
